--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=80
+server.port=8080
 
 #MySQL ?? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=0615
 
 #???? ?? ?? ??
 spring.jpa.properties.hibernate.show_sql=true
@@ -18,3 +18,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+spring.devtools.livereload.enabled=true
+
+#thymeleaf cache ?? ??
+spring.thymeleaf.cache = false
