--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,5 +4,7 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=create
+
 # H2 ?????? ?? ??
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
