--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,24 @@ spring.jpa.properties.hibernate.format_sql=true
 #??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.devtools.livereload.enabled=true
 
 #thymeleaf cache ?? ??
 spring.thymeleaf.cache = false
+
+#?? ? ?? ?? ???
+spring.servlet.multipart.max-file-size=20MB
+
+#??? ?? ?? ??
+spring.servlet.multipart.max-request-size=100MB
+
+#?? ??? ??? ??
+itemImgLocation=C:/shop/item
+
+#??? ??? ??
+uploadPath=file:///C:/shop/item
+
+#
