--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #??? ???? ???? ??? ???? ??
-logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sq=trace
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -35,4 +35,5 @@ itemImgLocation=C:/shop/item
 #??? ??? ??
 uploadPath=file:///C:/shop/item
 
-#
+#?? batch size ??
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
